--- a/Assignment_10/EventfulWrapper/app/build.gradle
+++ b/Assignment_10/EventfulWrapper/app/build.gradle
@@ -17,25 +17,41 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
     /*implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'*/
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+            implementation 'com.android.support:appcompat-v7:26.1.0'
+            implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+            testImplementation 'junit:junit:4.12'
+            androidTestImplementation 'com.android.support.test:runner:1.0.1'
+            androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'*/
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     // consume a REST Web Service and parse JSON result using Volley API
     implementation 'com.android.volley:volley:1.0.0'
     // https://mvnrepository.com/artifact/javax.json/javax.json-api
-//    implementation group: 'javax.json', name: 'javax.json-api', version: '1.0'
+    //    implementation group: 'javax.json', name: 'javax.json-api', version: '1.0'
     // https://mvnrepository.com/artifact/org.glassfish/javax.json
-    implementation group: 'org.glassfish', name: 'javax.json', version: '1.0.4'
+    implementation 'org.glassfish:javax.json:1.0.4'
+    implementation 'org.apache.httpcomponents:httpclient:4.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
     testImplementation 'junit:junit:4.12'
+    implementation files('libs/eventfulapi.jar')
 }
