--- a/Assignment_10/EventfulWrapper/app/build.gradle
+++ b/Assignment_10/EventfulWrapper/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     //    implementation group: 'javax.json', name: 'javax.json-api', version: '1.0'
     // https://mvnrepository.com/artifact/org.glassfish/javax.json
     implementation 'org.glassfish:javax.json:1.0.4'
-    implementation 'org.apache.httpcomponents:httpclient:4.5'
+    implementation 'org.apache.commons:commons-lang3:3.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
     testImplementation 'junit:junit:4.12'
     implementation files('libs/eventfulapi.jar')
